kube_task/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-test-pod
  labels:
    app: my-app-test
spec:
  containers:
    - name: my-app
      image: my-app:latest
      imagePullPolicy: IfNotPresent
      ports:
        - name: http
          containerPort: 8080
      volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
        - name: config-volume
          mountPath: /app/config
          readOnly: true
  volumes:
    - name: logs-volume
      emptyDir: {}
    - name: config-volume
      configMap:
        name: my-app-config
