kube_task/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  labels:
    app: my-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
